ios/chrome/browser/content_suggestions/content_suggestions_header_view_controller.mm
@@ -158,6 +158,10 @@ const CGFloat kHintLabelSidePadding = 12;
   }
 }
 
+- (void)layoutHeader {
+  [self.headerView layoutIfNeeded];
+}
+
 #pragma mark - ContentSuggestionsHeaderProvider
 
 - (UIView*)headerForWidth:(CGFloat)width {
